--- a/src/components/FriendCard/style.css
+++ b/src/components/FriendCard/style.css
@@ -8,4 +8,16 @@
     margin-bottom: 5px;
     width: 100%;
   }
+
+
+.card  > .img-container {
+  height: 200px;
+  width: 250px;
+  overflow: hidden;
+  padding: 70px;
+}
+
+.card > .img-container > img {
+  width: 100%;
+}
   
